--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     box-sizing: border-box;
 }
 
-.box-shadow,.current-box, .day-display-box ,.hourly-display-container,.hourly-display-container{
+.box-shadow {
   box-shadow: 0 8px 16px 0 rgba(2, 1, 44, 0.32);
 
 }
