--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header{
  
  display: grid;
  grid-template-columns: repeat(2,1fr);
- grid-template-rows: repeat(2,1fr);
+ grid-template-rows: repeat(auto-fit,200px);
  width: 100%;
  gap:1em;
 }
@@ -72,7 +72,7 @@ header{
 .day-display-container{
         
          display:grid;
-         grid-template-columns: repeat(3,1fr);
+         grid-template-columns: repeat(2,1fr);
          gap:15px
         
     
